# controller

./: AGENTS.md  FEATURE_PACK.md  FILES.txt  MANIFEST.json  PAC_CHANGELOG.json  README.md  SOURCE_VERSIONS.md  VERSION  VERSION_CURRENT.md  changed_1.0.49.txt  changed_1.0.50.txt  changed_1.0.51.txt  changed_1.0.52.txt  changed_1.0.53.txt  changed_1.0.55.txt  changed_1.0.56.txt  changed_1.0.57.txt  changed_1.0.58.txt  changed_1.0.59.txt  changed_1.0.60.txt  changed_1.0.61.txt  changed_1.0.62.txt  changed_1.0.63.txt  changed_1.0.64.txt  changed_1.0.65.txt  changed_1.0.66.txt  changed_1.0.67.txt  changed_1.0.68.txt  changed_1.0.69.txt  changed_1.0.70.txt  changed_1.0.71.txt  changed_1.0.72.txt  changed_1.0.73.txt  changed_1.0.74.txt  changed_1.0.75.txt  changed_1.0.76.txt  changed_1.0.77.txt  changed_1.0.78.txt  changed_1.0.79.txt  changed_1.0.80.txt  (+25 more)
backups/: v1.0.107-user.diff  v1.0.107.diff  v1.0.107.json
binaries/: README.md
config/: example.config.yaml
deploy/: compose.traefik.yaml
docs/: PAC_AGENT_TOOL_PIPELINE_STATUS.md  PAC_BROWSER_ROUTING_STATUS.md  PAC_CODE_INTELLIGENCE_STATUS.md  PAC_CONTEXT_MANAGEMENT_STATUS.md  PAC_DEBUG_BUNDLE_STATUS.md  PAC_DOOM_LOOP_DETECTION_STATUS.md  PAC_ENVIRONMENT_DEBUG_DOWNLOADS_STATUS.md  PAC_IDE_Session_Architecture_v0.1.adoc  PAC_LOCAL_INFERENCE_STATUS.md  PAC_MODEL_HOTSWAP_STATUS.md  PAC_PLAYBOOKS_STATUS.md  PAC_PROVIDER_CALL_CONTROL_STATUS.md  PAC_SPECIALIST_SUBAGENTS_STATUS.md  PAC_THOUGHT_INSPECTOR_STATUS.md  PAC_Technical_Design_v0.2.adoc  agent-loop-intent-recovery-20260523.md  agent-loop-live-progress-20260523.md  (+59 more)
(+572 files in other folders)
